--- a/iosApp/QRShield/de.lproj/Localizable.strings
+++ b/iosApp/QRShield/de.lproj/Localizable.strings
@@ -286,170 +286,129 @@
 "settings.language_restart_message" = "Die App muss neu gestartet werden, um die neue Sprache anzuwenden.";
 "settings.restart_later" = "Später";
 
-// MARK: - New Keys (English placeholder - translate)
-"result.url_breakdown" = "URL BREAKDOWN";
-"result.full_url" = "FULL URL";
-"result.open_safari" = "Open in Safari (Risky)";
-"result.open_warning_full" = "Opening this URL in your browser may expose you to security risks.";
-"result.restricted_mode" = "Restricted Mode";
-"result.restricted_description" = "This URL has been flagged as potentially dangerous. Review the analysis below before proceeding.";
-"result.dangerous_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
 
-// MARK: - Navigation
-"nav.quick_actions" = "QUICK ACTIONS";
-"nav.systems_operational" = "All systems operational";
-
-// MARK: - Common
-"common.enabled" = "Enabled";
-"common.disabled" = "Disabled";
-
-// MARK: - Language Settings
-"settings.language" = "Language";
-"settings.language_section" = "Language";
-"settings.language_system" = "System Default";
-"settings.language_search" = "Search languages";
-"settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
-"settings.language_changed" = "Language Changed";
-"settings.restart_later" = "Later";
-"settings.restart_now" = "Restart Now";
-"settings.language_restart_message" = "To fully apply the new language, please restart the app.";
-
-// MARK: - Restart Required Screen
-"settings.restart_title" = "Restart Required";
-"settings.restart_subtitle" = "To display QR-SHIELD in %@, please restart the app.";
-"settings.restart_step1" = "Tap 'Close App' below";
-"settings.restart_step2" = "Swipe up from the app switcher to fully close";
-"settings.restart_step3" = "Reopen QR-SHIELD to see the new language";
-"settings.close_app" = "Close App";
-"settings.restart_error_title" = "Restart Error";
-"settings.restart_error_message" = "Unable to close the app automatically. Please close and reopen the app manually to apply your language change.";
-"common.ok" = "OK";
-
-// MARK: - Beat The Bot (Training)
-"training.mode" = "TRAINING MODE";
-"training.beat_the_bot" = "Beat the Bot";
-"training.seconds" = "Seconds";
+// MARK: - Training (Beat The Bot)
+"training.mode" = "TRAININGSMODUS";
+"training.beat_the_bot" = "Schlage den Bot";
+"training.seconds" = "Sekunden";
 "training.level" = "LEVEL %d";
-"training.unusual_signin" = "Unusual Sign-in Attempt";
-"training.unusual_signin_message" = "We detected a login from a new device. Please verify your identity immediately to prevent account suspension.";
-"training.verify_identity" = "Verify Identity";
+"training.unusual_signin" = "Ungewöhnlicher Anmeldeversuch";
+"training.unusual_signin_message" = "Wir haben eine Anmeldung von einem neuen Gerät erkannt. Bitte bestätigen Sie sofort Ihre Identität.";
+"training.verify_identity" = "Identität bestätigen";
 "training.phishing" = "Phishing";
-"training.legitimate" = "Legitimate";
-"training.live_session" = "LIVE SESSION";
+"training.legitimate" = "Legitim";
+"training.live_session" = "LIVE-SITZUNG";
 "training.online" = "ONLINE";
-"training.bot_confidence" = "Bot Confidence:";
-"training.ai_analysis" = "AI NEURAL ANALYSIS";
-"training.live_hint" = "Live Hint";
-"training.tip" = "Tip:";
-"training.beginner" = "BEGINNER";
-"training.intermediate" = "INTERMEDIATE";
-"training.advanced" = "ADVANCED";
-"training.nightmare" = "NIGHTMARE";
+"training.bot_confidence" = "Bot-Zuversicht:";
+"training.ai_analysis" = "KI-NEURALANALYSE";
+"training.live_hint" = "Live-Hinweis";
+"training.tip" = "Tipp:";
+"training.beginner" = "ANFÄNGER";
+"training.intermediate" = "FORTGESCHRITTEN";
+"training.advanced" = "EXPERTE";
+"training.nightmare" = "ALBTRAUM";
 
 // MARK: - Settings Additional
-"settings.security_alerts_title" = "Security alerts";
-"settings.security_alerts_desc" = "Get notified about security threats";
-"settings.notifications_denied_message" = "To receive security alerts, please enable notifications for QR-SHIELD in Settings.";
-"settings.system_appearance_label" = "System Appearance";
-"settings.clear_history_button" = "Clear History";
-"settings.privacy_policy_link" = "Privacy Policy";
-"settings.source_code_link" = "Source Code";
+"settings.security_alerts_title" = "Sicherheitswarnungen";
+"settings.security_alerts_desc" = "Benachrichtigungen über Sicherheitsbedrohungen erhalten";
+"settings.notifications_denied_message" = "Um Sicherheitswarnungen zu erhalten, aktivieren Sie bitte Benachrichtigungen für QR-SHIELD in den Einstellungen.";
+"settings.system_appearance_label" = "Systemdarstellung";
+"settings.clear_history_button" = "Verlauf löschen";
+"settings.privacy_policy_link" = "Datenschutzrichtlinie";
+"settings.source_code_link" = "Quellcode";
 "settings.engine_swift" = "Swift 6";
-"settings.clear_confirm_message" = "This action cannot be undone. All scan history will be permanently deleted.";
+"settings.clear_confirm_message" = "Diese Aktion kann nicht rückgängig gemacht werden. Der gesamte Scanverlauf wird dauerhaft gelöscht.";
 "settings.ios_version" = "iOS 17+";
-"settings.liquid_glass_footer" = "iOS 17+ introduces beautiful Liquid Glass effects. Reduce effects if you experience performance issues.";
+"settings.liquid_glass_footer" = "iOS 17+ führt schöne Liquid Glass-Effekte ein. Reduzieren Sie die Effekte bei Leistungsproblemen.";
 
 // MARK: - Dashboard Additional
-"dashboard.hero.description_full" = "QR-SHIELD analyses potential threats directly on your hardware. Experience";
-"dashboard.zero_latency" = "zero-latency phishing detection";
+"dashboard.hero.description_full" = "QR-SHIELD analysiert potenzielle Bedrohungen direkt auf Ihrer Hardware. Erleben Sie";
+"dashboard.zero_latency" = "Phishing-Erkennung ohne Verzögerung";
 "dashboard.version_date" = "Version 2023.10.24";
-"dashboard.offline_badge" = "OFFLINE READY";
+"dashboard.offline_badge" = "OFFLINE BEREIT";
 
 // MARK: - Navigation
-"nav.version_offline" = "v2.4.0 • Offline Mode";
+"nav.version_offline" = "v2.4.0 • Offline-Modus";
 
 // MARK: - Results Additional
-"result.block_warning" = "This will block the domain and report it to your security team.";
-"result.dangerous_full_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
-"result.open_safari_risky" = "Open in Safari (Risky)";
-"result.open_warning_browser" = "Opening this URL in your browser may expose you to security risks.";
+"result.block_warning" = "Dadurch wird die Domain blockiert und an Ihr Sicherheitsteam gemeldet.";
+"result.dangerous_full_warning" = "Diese URL wurde als potenziell gefährlich eingestuft. Das Öffnen kann Sie Phishing, Malware oder anderen Bedrohungen aussetzen.\n\nMöchten Sie wirklich fortfahren?";
+"result.open_safari_risky" = "In Safari öffnen (riskant)";
+"result.open_warning_browser" = "Das Öffnen dieser URL in Ihrem Browser kann Sie Sicherheitsrisiken aussetzen.";
 
 // MARK: - Components
-"component.confidence" = "Confidence";
-"component.risk_score" = "Risk Score";
-"component.risk_flags" = "Risk Flags";
-"component.view_full_analysis" = "View Full Analysis";
-"component.select_image" = "Select an Image";
-"component.select_image_desc" = "Choose a photo containing a QR code";
-"component.idle_state" = "Idle State";
-"component.active_state" = "Active State";
+"component.confidence" = "Zuversicht";
+"component.risk_score" = "Risikobewertung";
+"component.risk_flags" = "Risikoflaggen";
+"component.view_full_analysis" = "Vollständige Analyse anzeigen";
+"component.select_image" = "Bild auswählen";
+"component.select_image_desc" = "Wählen Sie ein Foto mit einem QR-Code";
+"component.idle_state" = "Ruhezustand";
+"component.active_state" = "Aktiver Zustand";
 
 // MARK: - Threat History
-"threat.no_vulnerabilities" = "No vulnerabilities detected. Your device is secure.";
-"threat.live_map" = "LIVE THREAT MAP";
-"threat.global_view" = "Global View";
-"threat.last_audit" = "Last audit: %@";
-"threat.latest_updates" = "LATEST UPDATES";
+"threat.no_vulnerabilities" = "Keine Schwachstellen erkannt. Ihr Gerät ist sicher.";
+"threat.live_map" = "LIVE-BEDROHUNGSKARTE";
+"threat.global_view" = "Globale Ansicht";
+"threat.last_audit" = "Letzte Prüfung: %@";
+"threat.latest_updates" = "NEUESTE UPDATES";
 "threat.live" = "LIVE";
 
 // MARK: - History Additional
-"history.scan_statistics" = "Scan Statistics";
-"history.safe_count" = "Safe: %d";
-"history.suspicious_count" = "Suspicious: %d";
-"history.malicious_count" = "Malicious: %d";
-"history.total_scans" = "Total: %d scans";
+"history.scan_statistics" = "Scan-Statistiken";
+"history.safe_count" = "Sicher: %d";
+"history.suspicious_count" = "Verdächtig: %d";
+"history.malicious_count" = "Bösartig: %d";
+"history.total_scans" = "Gesamt: %d Scans";
+"history.exported_clipboard" = "In Zwischenablage exportiert";
+"history.url_label" = "URL";
 
 // MARK: - KMP Demo
 "kmp.integration" = "Kotlin Multiplatform Integration";
-"kmp.analyze_button" = "Analyze with KMP Engine";
-"kmp.quick_test" = "Quick Test:";
-"kmp.analysis_result" = "Analysis Result";
-"kmp.score_format" = "Score: %d/100";
-"kmp.risk_flags" = "Risk Flags:";
+"kmp.analyze_button" = "Mit KMP-Engine analysieren";
+"kmp.quick_test" = "Schnelltest:";
+"kmp.analysis_result" = "Analyseergebnis";
+"kmp.score_format" = "Punktzahl: %d/100";
+"kmp.risk_flags" = "Risikoflaggen:";
 "kmp.powered_by" = "Powered by Kotlin/Native";
 
 // MARK: - Scanner Additional
-"scanner.camera_required_title" = "Camera Access Required";
-"scanner.camera_required_message" = "QR-SHIELD needs camera access to scan QR codes. Please enable it in Settings.";
-"scanner.analyzing_dots" = "Analyzing...";
-"scanner.point_qr" = "Point at QR Code";
-"scanner.toggle_scan" = "Toggle scanning";
-"scanner.dismiss_error" = "Dismiss error";
-"scanner.camera_preview" = "Camera Preview";
+"scanner.camera_required_title" = "Kamerazugriff erforderlich";
+"scanner.camera_required_message" = "QR-SHIELD benötigt Kamerazugriff zum Scannen von QR-Codes. Bitte aktivieren Sie ihn in den Einstellungen.";
+"scanner.analyzing_dots" = "Analysiere...";
+"scanner.point_qr" = "Auf QR-Code zeigen";
+"scanner.toggle_scan" = "Scannen umschalten";
+"scanner.dismiss_error" = "Fehler schließen";
+"scanner.camera_preview" = "Kameravorschau";
 
 // MARK: - Trust Centre Additional
-"trust.low" = "Low";
-"trust.balanced" = "Balanced";
-"trust.paranoia" = "Paranoia";
-"trust.reset_defaults" = "Reset to Defaults";
+"trust.low" = "Niedrig";
+"trust.balanced" = "Ausgewogen";
+"trust.paranoia" = "Paranoid";
+"trust.reset_defaults" = "Auf Standard zurücksetzen";
 "trust.version_info" = "QR-SHIELD v2.4.0 (Build 892)";
 
 // MARK: - Export View
-"export.title" = "Export Threat Analysis";
-"export.subtitle" = "Choose a format to export your secure offline analysis.";
-"export.select_format" = "SELECT FORMAT";
-"export.live_preview" = "LIVE PREVIEW";
-"export.expand" = "Expand";
-"export.share" = "Share";
-"export.export_button" = "Export Report";
-"export.available_actions" = "AVAILABLE ACTIONS";
-"export.privacy_note" = "Privacy Note";
-"export.privacy_message" = "All analysis is performed entirely on your device. Exported reports do not contain any personal information beyond the URL you scanned.";
+"export.title" = "Bedrohungsanalyse exportieren";
+"export.subtitle" = "Wählen Sie ein Format für Ihre sichere Offline-Analyse.";
+"export.select_format" = "FORMAT WÄHLEN";
+"export.live_preview" = "LIVE-VORSCHAU";
+"export.expand" = "Erweitern";
+"export.share" = "Teilen";
+"export.export_button" = "Bericht exportieren";
+"export.available_actions" = "VERFÜGBARE AKTIONEN";
+"export.privacy_note" = "Datenschutzhinweis";
+"export.privacy_message" = "Alle Analysen werden vollständig auf Ihrem Gerät durchgeführt. Exportierte Berichte enthalten keine persönlichen Informationen außer der gescannten URL.";
 
 // MARK: - Onboarding Additional
-"onboarding.camera_permission_message" = "QR-SHIELD needs camera access to scan QR codes. You can change this later in Settings.";
-"onboarding.page_of" = "Page %d of %d";
-
-// MARK: - History Additional
-"history.exported_clipboard" = "Exported to clipboard";
-"history.url_label" = "URL";
+"onboarding.camera_permission_message" = "QR-SHIELD benötigt Kamerazugriff zum Scannen von QR-Codes. Sie können dies später in den Einstellungen ändern.";
+"onboarding.page_of" = "Seite %d von %d";
 
 // MARK: - Accessibility Labels
-"accessibility.risk_score" = "Risk Score";
-"accessibility.risk_flags" = "Risk Flags";
-"accessibility.scan_history" = "Scan History";
-"accessibility.dismiss_error" = "Dismiss error";
-"accessibility.toggle_scanning" = "Toggle scanning";
-"accessibility.gallery" = "Gallery";
-"accessibility.open_history" = "Open history";
+"accessibility.risk_score" = "Risikobewertung";
+"accessibility.risk_flags" = "Risikoflaggen";
+"accessibility.scan_history" = "Scanverlauf";
+"accessibility.dismiss_error" = "Fehler schließen";
+"accessibility.toggle_scanning" = "Scannen umschalten";
+"accessibility.gallery" = "Galerie";
+"accessibility.open_history" = "Verlauf öffnen";
