--- a/iosApp/QRShield/fr.lproj/Localizable.strings
+++ b/iosApp/QRShield/fr.lproj/Localizable.strings
@@ -286,170 +286,129 @@
 "settings.language_restart_message" = "L'app doit être redémarrée pour appliquer la nouvelle langue.";
 "settings.restart_later" = "Plus tard";
 
-// MARK: - New Keys (English placeholder - translate)
-"result.url_breakdown" = "URL BREAKDOWN";
-"result.full_url" = "FULL URL";
-"result.open_safari" = "Open in Safari (Risky)";
-"result.open_warning_full" = "Opening this URL in your browser may expose you to security risks.";
-"result.restricted_mode" = "Restricted Mode";
-"result.restricted_description" = "This URL has been flagged as potentially dangerous. Review the analysis below before proceeding.";
-"result.dangerous_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
 
-// MARK: - Navigation
-"nav.quick_actions" = "QUICK ACTIONS";
-"nav.systems_operational" = "All systems operational";
-
-// MARK: - Common
-"common.enabled" = "Enabled";
-"common.disabled" = "Disabled";
-
-// MARK: - Language Settings
-"settings.language" = "Language";
-"settings.language_section" = "Language";
-"settings.language_system" = "System Default";
-"settings.language_search" = "Search languages";
-"settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
-"settings.language_changed" = "Language Changed";
-"settings.restart_later" = "Later";
-"settings.restart_now" = "Restart Now";
-"settings.language_restart_message" = "To fully apply the new language, please restart the app.";
-
-// MARK: - Restart Required Screen
-"settings.restart_title" = "Restart Required";
-"settings.restart_subtitle" = "To display QR-SHIELD in %@, please restart the app.";
-"settings.restart_step1" = "Tap 'Close App' below";
-"settings.restart_step2" = "Swipe up from the app switcher to fully close";
-"settings.restart_step3" = "Reopen QR-SHIELD to see the new language";
-"settings.close_app" = "Close App";
-"settings.restart_error_title" = "Restart Error";
-"settings.restart_error_message" = "Unable to close the app automatically. Please close and reopen the app manually to apply your language change.";
-"common.ok" = "OK";
-
-// MARK: - Beat The Bot (Training)
-"training.mode" = "TRAINING MODE";
-"training.beat_the_bot" = "Beat the Bot";
-"training.seconds" = "Seconds";
-"training.level" = "LEVEL %d";
-"training.unusual_signin" = "Unusual Sign-in Attempt";
-"training.unusual_signin_message" = "We detected a login from a new device. Please verify your identity immediately to prevent account suspension.";
-"training.verify_identity" = "Verify Identity";
-"training.phishing" = "Phishing";
-"training.legitimate" = "Legitimate";
-"training.live_session" = "LIVE SESSION";
-"training.online" = "ONLINE";
-"training.bot_confidence" = "Bot Confidence:";
-"training.ai_analysis" = "AI NEURAL ANALYSIS";
-"training.live_hint" = "Live Hint";
-"training.tip" = "Tip:";
-"training.beginner" = "BEGINNER";
-"training.intermediate" = "INTERMEDIATE";
-"training.advanced" = "ADVANCED";
-"training.nightmare" = "NIGHTMARE";
+// MARK: - Training (Beat The Bot)
+"training.mode" = "MODE ENTRAÎNEMENT";
+"training.beat_the_bot" = "Battez le Bot";
+"training.seconds" = "Secondes";
+"training.level" = "NIVEAU %d";
+"training.unusual_signin" = "Tentative de connexion inhabituelle";
+"training.unusual_signin_message" = "Nous avons détecté une connexion depuis un nouvel appareil. Veuillez vérifier votre identité immédiatement.";
+"training.verify_identity" = "Vérifier l'identité";
+"training.phishing" = "Hameçonnage";
+"training.legitimate" = "Légitime";
+"training.live_session" = "SESSION EN DIRECT";
+"training.online" = "EN LIGNE";
+"training.bot_confidence" = "Confiance du Bot :";
+"training.ai_analysis" = "ANALYSE NEURALE IA";
+"training.live_hint" = "Indice en direct";
+"training.tip" = "Conseil :";
+"training.beginner" = "DÉBUTANT";
+"training.intermediate" = "INTERMÉDIAIRE";
+"training.advanced" = "AVANCÉ";
+"training.nightmare" = "CAUCHEMAR";
 
 // MARK: - Settings Additional
-"settings.security_alerts_title" = "Security alerts";
-"settings.security_alerts_desc" = "Get notified about security threats";
-"settings.notifications_denied_message" = "To receive security alerts, please enable notifications for QR-SHIELD in Settings.";
-"settings.system_appearance_label" = "System Appearance";
-"settings.clear_history_button" = "Clear History";
-"settings.privacy_policy_link" = "Privacy Policy";
-"settings.source_code_link" = "Source Code";
+"settings.security_alerts_title" = "Alertes de sécurité";
+"settings.security_alerts_desc" = "Recevoir des notifications sur les menaces";
+"settings.notifications_denied_message" = "Pour recevoir les alertes, activez les notifications pour QR-SHIELD dans Réglages.";
+"settings.system_appearance_label" = "Apparence du système";
+"settings.clear_history_button" = "Effacer l'historique";
+"settings.privacy_policy_link" = "Politique de confidentialité";
+"settings.source_code_link" = "Code source";
 "settings.engine_swift" = "Swift 6";
-"settings.clear_confirm_message" = "This action cannot be undone. All scan history will be permanently deleted.";
+"settings.clear_confirm_message" = "Cette action est irréversible. Tout l'historique sera définitivement supprimé.";
 "settings.ios_version" = "iOS 17+";
-"settings.liquid_glass_footer" = "iOS 17+ introduces beautiful Liquid Glass effects. Reduce effects if you experience performance issues.";
+"settings.liquid_glass_footer" = "iOS 17+ introduit de beaux effets Liquid Glass. Réduisez-les en cas de problèmes de performance.";
 
 // MARK: - Dashboard Additional
-"dashboard.hero.description_full" = "QR-SHIELD analyses potential threats directly on your hardware. Experience";
-"dashboard.zero_latency" = "zero-latency phishing detection";
+"dashboard.hero.description_full" = "QR-SHIELD analyse les menaces directement sur votre appareil. Découvrez";
+"dashboard.zero_latency" = "la détection de phishing sans latence";
 "dashboard.version_date" = "Version 2023.10.24";
-"dashboard.offline_badge" = "OFFLINE READY";
+"dashboard.offline_badge" = "PRÊT HORS LIGNE";
 
 // MARK: - Navigation
-"nav.version_offline" = "v2.4.0 • Offline Mode";
+"nav.version_offline" = "v2.4.0 • Mode hors ligne";
 
 // MARK: - Results Additional
-"result.block_warning" = "This will block the domain and report it to your security team.";
-"result.dangerous_full_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
-"result.open_safari_risky" = "Open in Safari (Risky)";
-"result.open_warning_browser" = "Opening this URL in your browser may expose you to security risks.";
+"result.block_warning" = "Cela bloquera le domaine et le signalera à votre équipe de sécurité.";
+"result.dangerous_full_warning" = "Cette URL a été signalée comme potentiellement dangereuse. L'ouvrir peut vous exposer au phishing ou aux malwares.\n\nÊtes-vous sûr de vouloir continuer ?";
+"result.open_safari_risky" = "Ouvrir dans Safari (risqué)";
+"result.open_warning_browser" = "Ouvrir cette URL dans votre navigateur peut vous exposer à des risques.";
 
 // MARK: - Components
-"component.confidence" = "Confidence";
-"component.risk_score" = "Risk Score";
-"component.risk_flags" = "Risk Flags";
-"component.view_full_analysis" = "View Full Analysis";
-"component.select_image" = "Select an Image";
-"component.select_image_desc" = "Choose a photo containing a QR code";
-"component.idle_state" = "Idle State";
-"component.active_state" = "Active State";
+"component.confidence" = "Confiance";
+"component.risk_score" = "Score de risque";
+"component.risk_flags" = "Indicateurs de risque";
+"component.view_full_analysis" = "Voir l'analyse complète";
+"component.select_image" = "Sélectionner une image";
+"component.select_image_desc" = "Choisissez une photo contenant un code QR";
+"component.idle_state" = "État inactif";
+"component.active_state" = "État actif";
 
 // MARK: - Threat History
-"threat.no_vulnerabilities" = "No vulnerabilities detected. Your device is secure.";
-"threat.live_map" = "LIVE THREAT MAP";
-"threat.global_view" = "Global View";
-"threat.last_audit" = "Last audit: %@";
-"threat.latest_updates" = "LATEST UPDATES";
-"threat.live" = "LIVE";
+"threat.no_vulnerabilities" = "Aucune vulnérabilité détectée. Votre appareil est sécurisé.";
+"threat.live_map" = "CARTE DES MENACES EN DIRECT";
+"threat.global_view" = "Vue globale";
+"threat.last_audit" = "Dernier audit : %@";
+"threat.latest_updates" = "DERNIÈRES MISES À JOUR";
+"threat.live" = "EN DIRECT";
 
 // MARK: - History Additional
-"history.scan_statistics" = "Scan Statistics";
-"history.safe_count" = "Safe: %d";
-"history.suspicious_count" = "Suspicious: %d";
-"history.malicious_count" = "Malicious: %d";
-"history.total_scans" = "Total: %d scans";
+"history.scan_statistics" = "Statistiques de scan";
+"history.safe_count" = "Sûrs : %d";
+"history.suspicious_count" = "Suspects : %d";
+"history.malicious_count" = "Malveillants : %d";
+"history.total_scans" = "Total : %d scans";
+"history.exported_clipboard" = "Exporté dans le presse-papiers";
+"history.url_label" = "URL";
 
 // MARK: - KMP Demo
-"kmp.integration" = "Kotlin Multiplatform Integration";
-"kmp.analyze_button" = "Analyze with KMP Engine";
-"kmp.quick_test" = "Quick Test:";
-"kmp.analysis_result" = "Analysis Result";
-"kmp.score_format" = "Score: %d/100";
-"kmp.risk_flags" = "Risk Flags:";
-"kmp.powered_by" = "Powered by Kotlin/Native";
+"kmp.integration" = "Intégration Kotlin Multiplatform";
+"kmp.analyze_button" = "Analyser avec le moteur KMP";
+"kmp.quick_test" = "Test rapide :";
+"kmp.analysis_result" = "Résultat de l'analyse";
+"kmp.score_format" = "Score : %d/100";
+"kmp.risk_flags" = "Indicateurs de risque :";
+"kmp.powered_by" = "Propulsé par Kotlin/Native";
 
 // MARK: - Scanner Additional
-"scanner.camera_required_title" = "Camera Access Required";
-"scanner.camera_required_message" = "QR-SHIELD needs camera access to scan QR codes. Please enable it in Settings.";
-"scanner.analyzing_dots" = "Analyzing...";
-"scanner.point_qr" = "Point at QR Code";
-"scanner.toggle_scan" = "Toggle scanning";
-"scanner.dismiss_error" = "Dismiss error";
-"scanner.camera_preview" = "Camera Preview";
+"scanner.camera_required_title" = "Accès à la caméra requis";
+"scanner.camera_required_message" = "QR-SHIELD a besoin de l'accès à la caméra pour scanner les codes QR. Activez-le dans Réglages.";
+"scanner.analyzing_dots" = "Analyse...";
+"scanner.point_qr" = "Pointez vers le code QR";
+"scanner.toggle_scan" = "Basculer le scan";
+"scanner.dismiss_error" = "Fermer l'erreur";
+"scanner.camera_preview" = "Aperçu de la caméra";
 
 // MARK: - Trust Centre Additional
-"trust.low" = "Low";
-"trust.balanced" = "Balanced";
-"trust.paranoia" = "Paranoia";
-"trust.reset_defaults" = "Reset to Defaults";
+"trust.low" = "Faible";
+"trust.balanced" = "Équilibré";
+"trust.paranoia" = "Paranoïaque";
+"trust.reset_defaults" = "Réinitialiser les paramètres";
 "trust.version_info" = "QR-SHIELD v2.4.0 (Build 892)";
 
 // MARK: - Export View
-"export.title" = "Export Threat Analysis";
-"export.subtitle" = "Choose a format to export your secure offline analysis.";
-"export.select_format" = "SELECT FORMAT";
-"export.live_preview" = "LIVE PREVIEW";
-"export.expand" = "Expand";
-"export.share" = "Share";
-"export.export_button" = "Export Report";
-"export.available_actions" = "AVAILABLE ACTIONS";
-"export.privacy_note" = "Privacy Note";
-"export.privacy_message" = "All analysis is performed entirely on your device. Exported reports do not contain any personal information beyond the URL you scanned.";
+"export.title" = "Exporter l'analyse des menaces";
+"export.subtitle" = "Choisissez un format pour exporter votre analyse sécurisée hors ligne.";
+"export.select_format" = "SÉLECTIONNER LE FORMAT";
+"export.live_preview" = "APERÇU EN DIRECT";
+"export.expand" = "Développer";
+"export.share" = "Partager";
+"export.export_button" = "Exporter le rapport";
+"export.available_actions" = "ACTIONS DISPONIBLES";
+"export.privacy_note" = "Note de confidentialité";
+"export.privacy_message" = "Toutes les analyses sont effectuées entièrement sur votre appareil. Les rapports exportés ne contiennent aucune information personnelle.";
 
 // MARK: - Onboarding Additional
-"onboarding.camera_permission_message" = "QR-SHIELD needs camera access to scan QR codes. You can change this later in Settings.";
-"onboarding.page_of" = "Page %d of %d";
-
-// MARK: - History Additional
-"history.exported_clipboard" = "Exported to clipboard";
-"history.url_label" = "URL";
+"onboarding.camera_permission_message" = "QR-SHIELD a besoin de l'accès à la caméra pour scanner les codes QR. Vous pouvez modifier cela dans Réglages.";
+"onboarding.page_of" = "Page %d sur %d";
 
 // MARK: - Accessibility Labels
-"accessibility.risk_score" = "Risk Score";
-"accessibility.risk_flags" = "Risk Flags";
-"accessibility.scan_history" = "Scan History";
-"accessibility.dismiss_error" = "Dismiss error";
-"accessibility.toggle_scanning" = "Toggle scanning";
-"accessibility.gallery" = "Gallery";
-"accessibility.open_history" = "Open history";
+"accessibility.risk_score" = "Score de risque";
+"accessibility.risk_flags" = "Indicateurs de risque";
+"accessibility.scan_history" = "Historique des scans";
+"accessibility.dismiss_error" = "Fermer l'erreur";
+"accessibility.toggle_scanning" = "Basculer le scan";
+"accessibility.gallery" = "Galerie";
+"accessibility.open_history" = "Ouvrir l'historique";
