--- a/iosApp/QRShield/hi.lproj/Localizable.strings
+++ b/iosApp/QRShield/hi.lproj/Localizable.strings
@@ -286,170 +286,129 @@
 "settings.language_restart_message" = "नई भाषा लागू करने के लिए ऐप को पुनः आरंभ करना होगा।";
 "settings.restart_later" = "बाद में";
 
-// MARK: - New Keys (English placeholder - translate)
-"result.url_breakdown" = "URL BREAKDOWN";
-"result.full_url" = "FULL URL";
-"result.open_safari" = "Open in Safari (Risky)";
-"result.open_warning_full" = "Opening this URL in your browser may expose you to security risks.";
-"result.restricted_mode" = "Restricted Mode";
-"result.restricted_description" = "This URL has been flagged as potentially dangerous. Review the analysis below before proceeding.";
-"result.dangerous_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
 
-// MARK: - Navigation
-"nav.quick_actions" = "QUICK ACTIONS";
-"nav.systems_operational" = "All systems operational";
-
-// MARK: - Common
-"common.enabled" = "Enabled";
-"common.disabled" = "Disabled";
-
-// MARK: - Language Settings
-"settings.language" = "Language";
-"settings.language_section" = "Language";
-"settings.language_system" = "System Default";
-"settings.language_search" = "Search languages";
-"settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
-"settings.language_changed" = "Language Changed";
-"settings.restart_later" = "Later";
-"settings.restart_now" = "Restart Now";
-"settings.language_restart_message" = "To fully apply the new language, please restart the app.";
-
-// MARK: - Restart Required Screen
-"settings.restart_title" = "Restart Required";
-"settings.restart_subtitle" = "To display QR-SHIELD in %@, please restart the app.";
-"settings.restart_step1" = "Tap 'Close App' below";
-"settings.restart_step2" = "Swipe up from the app switcher to fully close";
-"settings.restart_step3" = "Reopen QR-SHIELD to see the new language";
-"settings.close_app" = "Close App";
-"settings.restart_error_title" = "Restart Error";
-"settings.restart_error_message" = "Unable to close the app automatically. Please close and reopen the app manually to apply your language change.";
-"common.ok" = "OK";
-
-// MARK: - Beat The Bot (Training)
-"training.mode" = "TRAINING MODE";
-"training.beat_the_bot" = "Beat the Bot";
-"training.seconds" = "Seconds";
-"training.level" = "LEVEL %d";
-"training.unusual_signin" = "Unusual Sign-in Attempt";
-"training.unusual_signin_message" = "We detected a login from a new device. Please verify your identity immediately to prevent account suspension.";
-"training.verify_identity" = "Verify Identity";
-"training.phishing" = "Phishing";
-"training.legitimate" = "Legitimate";
-"training.live_session" = "LIVE SESSION";
-"training.online" = "ONLINE";
-"training.bot_confidence" = "Bot Confidence:";
-"training.ai_analysis" = "AI NEURAL ANALYSIS";
-"training.live_hint" = "Live Hint";
-"training.tip" = "Tip:";
-"training.beginner" = "BEGINNER";
-"training.intermediate" = "INTERMEDIATE";
-"training.advanced" = "ADVANCED";
-"training.nightmare" = "NIGHTMARE";
+// MARK: - Training (Beat The Bot)
+"training.mode" = "प्रशिक्षण मोड";
+"training.beat_the_bot" = "बॉट को हराएं";
+"training.seconds" = "सेकंड";
+"training.level" = "लेवल %d";
+"training.unusual_signin" = "असामान्य साइन-इन";
+"training.unusual_signin_message" = "हमने नए डिवाइस से लॉगिन का पता लगाया। कृपया तुरंत अपनी पहचान सत्यापित करें।";
+"training.verify_identity" = "पहचान सत्यापित करें";
+"training.phishing" = "फ़िशिंग";
+"training.legitimate" = "वैध";
+"training.live_session" = "लाइव सत्र";
+"training.online" = "ऑनलाइन";
+"training.bot_confidence" = "बॉट विश्वास:";
+"training.ai_analysis" = "AI न्यूरल विश्लेषण";
+"training.live_hint" = "लाइव संकेत";
+"training.tip" = "टिप:";
+"training.beginner" = "शुरुआती";
+"training.intermediate" = "मध्यम";
+"training.advanced" = "उन्नत";
+"training.nightmare" = "दुःस्वप्न";
 
 // MARK: - Settings Additional
-"settings.security_alerts_title" = "Security alerts";
-"settings.security_alerts_desc" = "Get notified about security threats";
-"settings.notifications_denied_message" = "To receive security alerts, please enable notifications for QR-SHIELD in Settings.";
-"settings.system_appearance_label" = "System Appearance";
-"settings.clear_history_button" = "Clear History";
-"settings.privacy_policy_link" = "Privacy Policy";
-"settings.source_code_link" = "Source Code";
+"settings.security_alerts_title" = "सुरक्षा अलर्ट";
+"settings.security_alerts_desc" = "खतरों के बारे में सूचनाएं प्राप्त करें";
+"settings.notifications_denied_message" = "अलर्ट प्राप्त करने के लिए, सेटिंग्स में QR-SHIELD के लिए सूचनाएं सक्षम करें।";
+"settings.system_appearance_label" = "सिस्टम उपस्थिति";
+"settings.clear_history_button" = "इतिहास साफ़ करें";
+"settings.privacy_policy_link" = "गोपनीयता नीति";
+"settings.source_code_link" = "स्रोत कोड";
 "settings.engine_swift" = "Swift 6";
-"settings.clear_confirm_message" = "This action cannot be undone. All scan history will be permanently deleted.";
+"settings.clear_confirm_message" = "यह क्रिया पूर्ववत नहीं की जा सकती। सभी स्कैन इतिहास स्थायी रूप से हटा दिया जाएगा।";
 "settings.ios_version" = "iOS 17+";
-"settings.liquid_glass_footer" = "iOS 17+ introduces beautiful Liquid Glass effects. Reduce effects if you experience performance issues.";
+"settings.liquid_glass_footer" = "iOS 17+ सुंदर Liquid Glass प्रभाव पेश करता है। प्रदर्शन समस्याओं पर प्रभाव कम करें।";
 
 // MARK: - Dashboard Additional
-"dashboard.hero.description_full" = "QR-SHIELD analyses potential threats directly on your hardware. Experience";
-"dashboard.zero_latency" = "zero-latency phishing detection";
-"dashboard.version_date" = "Version 2023.10.24";
-"dashboard.offline_badge" = "OFFLINE READY";
+"dashboard.hero.description_full" = "QR-SHIELD आपके हार्डवेयर पर सीधे खतरों का विश्लेषण करता है। अनुभव करें";
+"dashboard.zero_latency" = "शून्य-विलंबता फ़िशिंग पहचान";
+"dashboard.version_date" = "संस्करण 2023.10.24";
+"dashboard.offline_badge" = "ऑफ़लाइन तैयार";
 
 // MARK: - Navigation
-"nav.version_offline" = "v2.4.0 • Offline Mode";
+"nav.version_offline" = "v2.4.0 • ऑफ़लाइन मोड";
 
 // MARK: - Results Additional
-"result.block_warning" = "This will block the domain and report it to your security team.";
-"result.dangerous_full_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
-"result.open_safari_risky" = "Open in Safari (Risky)";
-"result.open_warning_browser" = "Opening this URL in your browser may expose you to security risks.";
+"result.block_warning" = "यह डोमेन को ब्लॉक करेगा और आपकी सुरक्षा टीम को रिपोर्ट करेगा।";
+"result.dangerous_full_warning" = "यह URL संभावित रूप से खतरनाक के रूप में चिह्नित है। इसे खोलने से फ़िशिंग या मैलवेयर का खतरा हो सकता है।\n\nक्या आप जारी रखना चाहते हैं?";
+"result.open_safari_risky" = "Safari में खोलें (जोखिमपूर्ण)";
+"result.open_warning_browser" = "इस URL को ब्राउज़र में खोलने से सुरक्षा जोखिम हो सकता है।";
 
 // MARK: - Components
-"component.confidence" = "Confidence";
-"component.risk_score" = "Risk Score";
-"component.risk_flags" = "Risk Flags";
-"component.view_full_analysis" = "View Full Analysis";
-"component.select_image" = "Select an Image";
-"component.select_image_desc" = "Choose a photo containing a QR code";
-"component.idle_state" = "Idle State";
-"component.active_state" = "Active State";
+"component.confidence" = "विश्वास";
+"component.risk_score" = "जोखिम स्कोर";
+"component.risk_flags" = "जोखिम फ़्लैग";
+"component.view_full_analysis" = "पूर्ण विश्लेषण देखें";
+"component.select_image" = "छवि चुनें";
+"component.select_image_desc" = "QR कोड वाली फ़ोटो चुनें";
+"component.idle_state" = "निष्क्रिय स्थिति";
+"component.active_state" = "सक्रिय स्थिति";
 
 // MARK: - Threat History
-"threat.no_vulnerabilities" = "No vulnerabilities detected. Your device is secure.";
-"threat.live_map" = "LIVE THREAT MAP";
-"threat.global_view" = "Global View";
-"threat.last_audit" = "Last audit: %@";
-"threat.latest_updates" = "LATEST UPDATES";
-"threat.live" = "LIVE";
+"threat.no_vulnerabilities" = "कोई कमजोरी नहीं मिली। आपका डिवाइस सुरक्षित है।";
+"threat.live_map" = "लाइव खतरा मानचित्र";
+"threat.global_view" = "वैश्विक दृश्य";
+"threat.last_audit" = "अंतिम ऑडिट: %@";
+"threat.latest_updates" = "नवीनतम अपडेट";
+"threat.live" = "लाइव";
 
 // MARK: - History Additional
-"history.scan_statistics" = "Scan Statistics";
-"history.safe_count" = "Safe: %d";
-"history.suspicious_count" = "Suspicious: %d";
-"history.malicious_count" = "Malicious: %d";
-"history.total_scans" = "Total: %d scans";
+"history.scan_statistics" = "स्कैन आंकड़े";
+"history.safe_count" = "सुरक्षित: %d";
+"history.suspicious_count" = "संदिग्ध: %d";
+"history.malicious_count" = "हानिकारक: %d";
+"history.total_scans" = "कुल: %d स्कैन";
+"history.exported_clipboard" = "क्लिपबोर्ड में निर्यात किया गया";
+"history.url_label" = "URL";
 
 // MARK: - KMP Demo
-"kmp.integration" = "Kotlin Multiplatform Integration";
-"kmp.analyze_button" = "Analyze with KMP Engine";
-"kmp.quick_test" = "Quick Test:";
-"kmp.analysis_result" = "Analysis Result";
-"kmp.score_format" = "Score: %d/100";
-"kmp.risk_flags" = "Risk Flags:";
-"kmp.powered_by" = "Powered by Kotlin/Native";
+"kmp.integration" = "Kotlin मल्टीप्लेटफॉर्म एकीकरण";
+"kmp.analyze_button" = "KMP इंजन से विश्लेषण";
+"kmp.quick_test" = "त्वरित परीक्षण:";
+"kmp.analysis_result" = "विश्लेषण परिणाम";
+"kmp.score_format" = "स्कोर: %d/100";
+"kmp.risk_flags" = "जोखिम फ़्लैग:";
+"kmp.powered_by" = "Kotlin/Native द्वारा संचालित";
 
 // MARK: - Scanner Additional
-"scanner.camera_required_title" = "Camera Access Required";
-"scanner.camera_required_message" = "QR-SHIELD needs camera access to scan QR codes. Please enable it in Settings.";
-"scanner.analyzing_dots" = "Analyzing...";
-"scanner.point_qr" = "Point at QR Code";
-"scanner.toggle_scan" = "Toggle scanning";
-"scanner.dismiss_error" = "Dismiss error";
-"scanner.camera_preview" = "Camera Preview";
+"scanner.camera_required_title" = "कैमरा एक्सेस आवश्यक";
+"scanner.camera_required_message" = "QR-SHIELD को QR कोड स्कैन करने के लिए कैमरा एक्सेस चाहिए। सेटिंग्स में सक्षम करें।";
+"scanner.analyzing_dots" = "विश्लेषण हो रहा है...";
+"scanner.point_qr" = "QR कोड की ओर इशारा करें";
+"scanner.toggle_scan" = "स्कैन टॉगल करें";
+"scanner.dismiss_error" = "त्रुटि बंद करें";
+"scanner.camera_preview" = "कैमरा पूर्वावलोकन";
 
 // MARK: - Trust Centre Additional
-"trust.low" = "Low";
-"trust.balanced" = "Balanced";
-"trust.paranoia" = "Paranoia";
-"trust.reset_defaults" = "Reset to Defaults";
+"trust.low" = "कम";
+"trust.balanced" = "संतुलित";
+"trust.paranoia" = "पैरानॉइया";
+"trust.reset_defaults" = "डिफ़ॉल्ट पर रीसेट करें";
 "trust.version_info" = "QR-SHIELD v2.4.0 (Build 892)";
 
 // MARK: - Export View
-"export.title" = "Export Threat Analysis";
-"export.subtitle" = "Choose a format to export your secure offline analysis.";
-"export.select_format" = "SELECT FORMAT";
-"export.live_preview" = "LIVE PREVIEW";
-"export.expand" = "Expand";
-"export.share" = "Share";
-"export.export_button" = "Export Report";
-"export.available_actions" = "AVAILABLE ACTIONS";
-"export.privacy_note" = "Privacy Note";
-"export.privacy_message" = "All analysis is performed entirely on your device. Exported reports do not contain any personal information beyond the URL you scanned.";
+"export.title" = "खतरा विश्लेषण निर्यात करें";
+"export.subtitle" = "अपने सुरक्षित ऑफ़लाइन विश्लेषण को निर्यात करने के लिए प्रारूप चुनें।";
+"export.select_format" = "प्रारूप चुनें";
+"export.live_preview" = "लाइव पूर्वावलोकन";
+"export.expand" = "विस्तार करें";
+"export.share" = "साझा करें";
+"export.export_button" = "रिपोर्ट निर्यात करें";
+"export.available_actions" = "उपलब्ध क्रियाएं";
+"export.privacy_note" = "गोपनीयता नोट";
+"export.privacy_message" = "सभी विश्लेषण आपके डिवाइस पर किए जाते हैं। निर्यात की गई रिपोर्ट में कोई व्यक्तिगत जानकारी नहीं होती।";
 
 // MARK: - Onboarding Additional
-"onboarding.camera_permission_message" = "QR-SHIELD needs camera access to scan QR codes. You can change this later in Settings.";
-"onboarding.page_of" = "Page %d of %d";
-
-// MARK: - History Additional
-"history.exported_clipboard" = "Exported to clipboard";
-"history.url_label" = "URL";
+"onboarding.camera_permission_message" = "QR-SHIELD को QR कोड स्कैन करने के लिए कैमरा एक्सेस चाहिए। आप बाद में सेटिंग्स में बदल सकते हैं।";
+"onboarding.page_of" = "पृष्ठ %d का %d";
 
 // MARK: - Accessibility Labels
-"accessibility.risk_score" = "Risk Score";
-"accessibility.risk_flags" = "Risk Flags";
-"accessibility.scan_history" = "Scan History";
-"accessibility.dismiss_error" = "Dismiss error";
-"accessibility.toggle_scanning" = "Toggle scanning";
-"accessibility.gallery" = "Gallery";
-"accessibility.open_history" = "Open history";
+"accessibility.risk_score" = "जोखिम स्कोर";
+"accessibility.risk_flags" = "जोखिम फ़्लैग";
+"accessibility.scan_history" = "स्कैन इतिहास";
+"accessibility.dismiss_error" = "त्रुटि बंद करें";
+"accessibility.toggle_scanning" = "स्कैन टॉगल करें";
+"accessibility.gallery" = "गैलरी";
+"accessibility.open_history" = "इतिहास खोलें";
