--- a/iosApp/QRShield/id.lproj/Localizable.strings
+++ b/iosApp/QRShield/id.lproj/Localizable.strings
@@ -285,170 +285,129 @@
 "settings.language_restart_message" = "Aplikasi perlu dimulai ulang untuk menerapkan bahasa baru.";
 "settings.restart_later" = "Nanti";
 
-// MARK: - New Keys (English placeholder - translate)
-"result.url_breakdown" = "URL BREAKDOWN";
-"result.full_url" = "FULL URL";
-"result.open_safari" = "Open in Safari (Risky)";
-"result.open_warning_full" = "Opening this URL in your browser may expose you to security risks.";
-"result.restricted_mode" = "Restricted Mode";
-"result.restricted_description" = "This URL has been flagged as potentially dangerous. Review the analysis below before proceeding.";
-"result.dangerous_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
 
-// MARK: - Navigation
-"nav.quick_actions" = "QUICK ACTIONS";
-"nav.systems_operational" = "All systems operational";
-
-// MARK: - Common
-"common.enabled" = "Enabled";
-"common.disabled" = "Disabled";
-
-// MARK: - Language Settings
-"settings.language" = "Language";
-"settings.language_section" = "Language";
-"settings.language_system" = "System Default";
-"settings.language_search" = "Search languages";
-"settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
-"settings.language_changed" = "Language Changed";
-"settings.restart_later" = "Later";
-"settings.restart_now" = "Restart Now";
-"settings.language_restart_message" = "To fully apply the new language, please restart the app.";
-
-// MARK: - Restart Required Screen
-"settings.restart_title" = "Restart Required";
-"settings.restart_subtitle" = "To display QR-SHIELD in %@, please restart the app.";
-"settings.restart_step1" = "Tap 'Close App' below";
-"settings.restart_step2" = "Swipe up from the app switcher to fully close";
-"settings.restart_step3" = "Reopen QR-SHIELD to see the new language";
-"settings.close_app" = "Close App";
-"settings.restart_error_title" = "Restart Error";
-"settings.restart_error_message" = "Unable to close the app automatically. Please close and reopen the app manually to apply your language change.";
-"common.ok" = "OK";
-
-// MARK: - Beat The Bot (Training)
-"training.mode" = "TRAINING MODE";
-"training.beat_the_bot" = "Beat the Bot";
-"training.seconds" = "Seconds";
+// MARK: - Training (Beat The Bot)
+"training.mode" = "MODE PELATIHAN";
+"training.beat_the_bot" = "Kalahkan Bot";
+"training.seconds" = "Detik";
 "training.level" = "LEVEL %d";
-"training.unusual_signin" = "Unusual Sign-in Attempt";
-"training.unusual_signin_message" = "We detected a login from a new device. Please verify your identity immediately to prevent account suspension.";
-"training.verify_identity" = "Verify Identity";
+"training.unusual_signin" = "Login tidak biasa";
+"training.unusual_signin_message" = "Kami mendeteksi login dari perangkat baru. Segera verifikasi identitas Anda.";
+"training.verify_identity" = "Verifikasi identitas";
 "training.phishing" = "Phishing";
-"training.legitimate" = "Legitimate";
-"training.live_session" = "LIVE SESSION";
+"training.legitimate" = "Sah";
+"training.live_session" = "SESI LANGSUNG";
 "training.online" = "ONLINE";
-"training.bot_confidence" = "Bot Confidence:";
-"training.ai_analysis" = "AI NEURAL ANALYSIS";
-"training.live_hint" = "Live Hint";
-"training.tip" = "Tip:";
-"training.beginner" = "BEGINNER";
-"training.intermediate" = "INTERMEDIATE";
-"training.advanced" = "ADVANCED";
-"training.nightmare" = "NIGHTMARE";
+"training.bot_confidence" = "Keyakinan Bot:";
+"training.ai_analysis" = "ANALISIS NEURAL AI";
+"training.live_hint" = "Petunjuk langsung";
+"training.tip" = "Tips:";
+"training.beginner" = "PEMULA";
+"training.intermediate" = "MENENGAH";
+"training.advanced" = "LANJUTAN";
+"training.nightmare" = "MIMPI BURUK";
 
 // MARK: - Settings Additional
-"settings.security_alerts_title" = "Security alerts";
-"settings.security_alerts_desc" = "Get notified about security threats";
-"settings.notifications_denied_message" = "To receive security alerts, please enable notifications for QR-SHIELD in Settings.";
-"settings.system_appearance_label" = "System Appearance";
-"settings.clear_history_button" = "Clear History";
-"settings.privacy_policy_link" = "Privacy Policy";
-"settings.source_code_link" = "Source Code";
+"settings.security_alerts_title" = "Peringatan keamanan";
+"settings.security_alerts_desc" = "Terima notifikasi tentang ancaman";
+"settings.notifications_denied_message" = "Untuk menerima peringatan, aktifkan notifikasi untuk QR-SHIELD di Pengaturan.";
+"settings.system_appearance_label" = "Tampilan sistem";
+"settings.clear_history_button" = "Hapus riwayat";
+"settings.privacy_policy_link" = "Kebijakan privasi";
+"settings.source_code_link" = "Kode sumber";
 "settings.engine_swift" = "Swift 6";
-"settings.clear_confirm_message" = "This action cannot be undone. All scan history will be permanently deleted.";
+"settings.clear_confirm_message" = "Tindakan ini tidak dapat dibatalkan. Semua riwayat akan dihapus permanen.";
 "settings.ios_version" = "iOS 17+";
-"settings.liquid_glass_footer" = "iOS 17+ introduces beautiful Liquid Glass effects. Reduce effects if you experience performance issues.";
+"settings.liquid_glass_footer" = "iOS 17+ memperkenalkan efek Liquid Glass yang indah. Kurangi efek jika ada masalah kinerja.";
 
 // MARK: - Dashboard Additional
-"dashboard.hero.description_full" = "QR-SHIELD analyses potential threats directly on your hardware. Experience";
-"dashboard.zero_latency" = "zero-latency phishing detection";
-"dashboard.version_date" = "Version 2023.10.24";
-"dashboard.offline_badge" = "OFFLINE READY";
+"dashboard.hero.description_full" = "QR-SHIELD menganalisis ancaman langsung di perangkat Anda. Rasakan";
+"dashboard.zero_latency" = "deteksi phishing tanpa latensi";
+"dashboard.version_date" = "Versi 2023.10.24";
+"dashboard.offline_badge" = "SIAP OFFLINE";
 
 // MARK: - Navigation
-"nav.version_offline" = "v2.4.0 • Offline Mode";
+"nav.version_offline" = "v2.4.0 • Mode offline";
 
 // MARK: - Results Additional
-"result.block_warning" = "This will block the domain and report it to your security team.";
-"result.dangerous_full_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
-"result.open_safari_risky" = "Open in Safari (Risky)";
-"result.open_warning_browser" = "Opening this URL in your browser may expose you to security risks.";
+"result.block_warning" = "Ini akan memblokir domain dan melaporkannya ke tim keamanan.";
+"result.dangerous_full_warning" = "URL ini telah ditandai sebagai berpotensi berbahaya. Membukanya dapat membuat Anda terkena phishing atau malware.\n\nYakin ingin melanjutkan?";
+"result.open_safari_risky" = "Buka di Safari (berisiko)";
+"result.open_warning_browser" = "Membuka URL ini di browser dapat membuat Anda terkena risiko keamanan.";
 
 // MARK: - Components
-"component.confidence" = "Confidence";
-"component.risk_score" = "Risk Score";
-"component.risk_flags" = "Risk Flags";
-"component.view_full_analysis" = "View Full Analysis";
-"component.select_image" = "Select an Image";
-"component.select_image_desc" = "Choose a photo containing a QR code";
-"component.idle_state" = "Idle State";
-"component.active_state" = "Active State";
+"component.confidence" = "Keyakinan";
+"component.risk_score" = "Skor risiko";
+"component.risk_flags" = "Indikator risiko";
+"component.view_full_analysis" = "Lihat analisis lengkap";
+"component.select_image" = "Pilih gambar";
+"component.select_image_desc" = "Pilih foto yang berisi kode QR";
+"component.idle_state" = "Status tidak aktif";
+"component.active_state" = "Status aktif";
 
 // MARK: - Threat History
-"threat.no_vulnerabilities" = "No vulnerabilities detected. Your device is secure.";
-"threat.live_map" = "LIVE THREAT MAP";
-"threat.global_view" = "Global View";
-"threat.last_audit" = "Last audit: %@";
-"threat.latest_updates" = "LATEST UPDATES";
-"threat.live" = "LIVE";
+"threat.no_vulnerabilities" = "Tidak ada kerentanan terdeteksi. Perangkat Anda aman.";
+"threat.live_map" = "PETA ANCAMAN LANGSUNG";
+"threat.global_view" = "Tampilan global";
+"threat.last_audit" = "Audit terakhir: %@";
+"threat.latest_updates" = "PEMBARUAN TERBARU";
+"threat.live" = "LANGSUNG";
 
 // MARK: - History Additional
-"history.scan_statistics" = "Scan Statistics";
-"history.safe_count" = "Safe: %d";
-"history.suspicious_count" = "Suspicious: %d";
-"history.malicious_count" = "Malicious: %d";
-"history.total_scans" = "Total: %d scans";
+"history.scan_statistics" = "Statistik pemindaian";
+"history.safe_count" = "Aman: %d";
+"history.suspicious_count" = "Mencurigakan: %d";
+"history.malicious_count" = "Berbahaya: %d";
+"history.total_scans" = "Total: %d pemindaian";
+"history.exported_clipboard" = "Diekspor ke clipboard";
+"history.url_label" = "URL";
 
 // MARK: - KMP Demo
-"kmp.integration" = "Kotlin Multiplatform Integration";
-"kmp.analyze_button" = "Analyze with KMP Engine";
-"kmp.quick_test" = "Quick Test:";
-"kmp.analysis_result" = "Analysis Result";
-"kmp.score_format" = "Score: %d/100";
-"kmp.risk_flags" = "Risk Flags:";
-"kmp.powered_by" = "Powered by Kotlin/Native";
+"kmp.integration" = "Integrasi Kotlin Multiplatform";
+"kmp.analyze_button" = "Analisis dengan mesin KMP";
+"kmp.quick_test" = "Tes cepat:";
+"kmp.analysis_result" = "Hasil analisis";
+"kmp.score_format" = "Skor: %d/100";
+"kmp.risk_flags" = "Indikator risiko:";
+"kmp.powered_by" = "Didukung oleh Kotlin/Native";
 
 // MARK: - Scanner Additional
-"scanner.camera_required_title" = "Camera Access Required";
-"scanner.camera_required_message" = "QR-SHIELD needs camera access to scan QR codes. Please enable it in Settings.";
-"scanner.analyzing_dots" = "Analyzing...";
-"scanner.point_qr" = "Point at QR Code";
-"scanner.toggle_scan" = "Toggle scanning";
-"scanner.dismiss_error" = "Dismiss error";
-"scanner.camera_preview" = "Camera Preview";
+"scanner.camera_required_title" = "Akses kamera diperlukan";
+"scanner.camera_required_message" = "QR-SHIELD memerlukan akses kamera untuk memindai kode QR. Aktifkan di Pengaturan.";
+"scanner.analyzing_dots" = "Menganalisis...";
+"scanner.point_qr" = "Arahkan ke kode QR";
+"scanner.toggle_scan" = "Alihkan pemindaian";
+"scanner.dismiss_error" = "Tutup error";
+"scanner.camera_preview" = "Pratinjau kamera";
 
 // MARK: - Trust Centre Additional
-"trust.low" = "Low";
-"trust.balanced" = "Balanced";
-"trust.paranoia" = "Paranoia";
-"trust.reset_defaults" = "Reset to Defaults";
+"trust.low" = "Rendah";
+"trust.balanced" = "Seimbang";
+"trust.paranoia" = "Paranoid";
+"trust.reset_defaults" = "Atur ulang default";
 "trust.version_info" = "QR-SHIELD v2.4.0 (Build 892)";
 
 // MARK: - Export View
-"export.title" = "Export Threat Analysis";
-"export.subtitle" = "Choose a format to export your secure offline analysis.";
-"export.select_format" = "SELECT FORMAT";
-"export.live_preview" = "LIVE PREVIEW";
-"export.expand" = "Expand";
-"export.share" = "Share";
-"export.export_button" = "Export Report";
-"export.available_actions" = "AVAILABLE ACTIONS";
-"export.privacy_note" = "Privacy Note";
-"export.privacy_message" = "All analysis is performed entirely on your device. Exported reports do not contain any personal information beyond the URL you scanned.";
+"export.title" = "Ekspor analisis ancaman";
+"export.subtitle" = "Pilih format untuk mengekspor analisis aman offline Anda.";
+"export.select_format" = "PILIH FORMAT";
+"export.live_preview" = "PRATINJAU LANGSUNG";
+"export.expand" = "Perluas";
+"export.share" = "Bagikan";
+"export.export_button" = "Ekspor laporan";
+"export.available_actions" = "TINDAKAN TERSEDIA";
+"export.privacy_note" = "Catatan privasi";
+"export.privacy_message" = "Semua analisis dilakukan di perangkat Anda. Laporan yang diekspor tidak berisi informasi pribadi.";
 
 // MARK: - Onboarding Additional
-"onboarding.camera_permission_message" = "QR-SHIELD needs camera access to scan QR codes. You can change this later in Settings.";
-"onboarding.page_of" = "Page %d of %d";
-
-// MARK: - History Additional
-"history.exported_clipboard" = "Exported to clipboard";
-"history.url_label" = "URL";
+"onboarding.camera_permission_message" = "QR-SHIELD memerlukan akses kamera untuk memindai kode QR. Anda dapat mengubahnya di Pengaturan.";
+"onboarding.page_of" = "Halaman %d dari %d";
 
 // MARK: - Accessibility Labels
-"accessibility.risk_score" = "Risk Score";
-"accessibility.risk_flags" = "Risk Flags";
-"accessibility.scan_history" = "Scan History";
-"accessibility.dismiss_error" = "Dismiss error";
-"accessibility.toggle_scanning" = "Toggle scanning";
-"accessibility.gallery" = "Gallery";
-"accessibility.open_history" = "Open history";
+"accessibility.risk_score" = "Skor risiko";
+"accessibility.risk_flags" = "Indikator risiko";
+"accessibility.scan_history" = "Riwayat pemindaian";
+"accessibility.dismiss_error" = "Tutup error";
+"accessibility.toggle_scanning" = "Alihkan pemindaian";
+"accessibility.gallery" = "Galeri";
+"accessibility.open_history" = "Buka riwayat";
