--- a/iosApp/QRShield/pt.lproj/Localizable.strings
+++ b/iosApp/QRShield/pt.lproj/Localizable.strings
@@ -286,170 +286,129 @@
 "settings.language_restart_message" = "O app precisa ser reiniciado para aplicar o novo idioma.";
 "settings.restart_later" = "Mais tarde";
 
-// MARK: - New Keys (English placeholder - translate)
-"result.url_breakdown" = "URL BREAKDOWN";
-"result.full_url" = "FULL URL";
-"result.open_safari" = "Open in Safari (Risky)";
-"result.open_warning_full" = "Opening this URL in your browser may expose you to security risks.";
-"result.restricted_mode" = "Restricted Mode";
-"result.restricted_description" = "This URL has been flagged as potentially dangerous. Review the analysis below before proceeding.";
-"result.dangerous_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
 
-// MARK: - Navigation
-"nav.quick_actions" = "QUICK ACTIONS";
-"nav.systems_operational" = "All systems operational";
-
-// MARK: - Common
-"common.enabled" = "Enabled";
-"common.disabled" = "Disabled";
-
-// MARK: - Language Settings
-"settings.language" = "Language";
-"settings.language_section" = "Language";
-"settings.language_system" = "System Default";
-"settings.language_search" = "Search languages";
-"settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
-"settings.language_changed" = "Language Changed";
-"settings.restart_later" = "Later";
-"settings.restart_now" = "Restart Now";
-"settings.language_restart_message" = "To fully apply the new language, please restart the app.";
-
-// MARK: - Restart Required Screen
-"settings.restart_title" = "Restart Required";
-"settings.restart_subtitle" = "To display QR-SHIELD in %@, please restart the app.";
-"settings.restart_step1" = "Tap 'Close App' below";
-"settings.restart_step2" = "Swipe up from the app switcher to fully close";
-"settings.restart_step3" = "Reopen QR-SHIELD to see the new language";
-"settings.close_app" = "Close App";
-"settings.restart_error_title" = "Restart Error";
-"settings.restart_error_message" = "Unable to close the app automatically. Please close and reopen the app manually to apply your language change.";
-"common.ok" = "OK";
-
-// MARK: - Beat The Bot (Training)
-"training.mode" = "TRAINING MODE";
-"training.beat_the_bot" = "Beat the Bot";
-"training.seconds" = "Seconds";
-"training.level" = "LEVEL %d";
-"training.unusual_signin" = "Unusual Sign-in Attempt";
-"training.unusual_signin_message" = "We detected a login from a new device. Please verify your identity immediately to prevent account suspension.";
-"training.verify_identity" = "Verify Identity";
+// MARK: - Training (Beat The Bot)
+"training.mode" = "MODO TREINO";
+"training.beat_the_bot" = "Vença o Bot";
+"training.seconds" = "Segundos";
+"training.level" = "NÍVEL %d";
+"training.unusual_signin" = "Login incomum";
+"training.unusual_signin_message" = "Detectamos um login de um novo dispositivo. Verifique sua identidade imediatamente.";
+"training.verify_identity" = "Verificar identidade";
 "training.phishing" = "Phishing";
-"training.legitimate" = "Legitimate";
-"training.live_session" = "LIVE SESSION";
+"training.legitimate" = "Legítimo";
+"training.live_session" = "SESSÃO AO VIVO";
 "training.online" = "ONLINE";
-"training.bot_confidence" = "Bot Confidence:";
-"training.ai_analysis" = "AI NEURAL ANALYSIS";
-"training.live_hint" = "Live Hint";
-"training.tip" = "Tip:";
-"training.beginner" = "BEGINNER";
-"training.intermediate" = "INTERMEDIATE";
-"training.advanced" = "ADVANCED";
-"training.nightmare" = "NIGHTMARE";
+"training.bot_confidence" = "Confiança do Bot:";
+"training.ai_analysis" = "ANÁLISE NEURAL IA";
+"training.live_hint" = "Dica ao vivo";
+"training.tip" = "Dica:";
+"training.beginner" = "INICIANTE";
+"training.intermediate" = "INTERMEDIÁRIO";
+"training.advanced" = "AVANÇADO";
+"training.nightmare" = "PESADELO";
 
 // MARK: - Settings Additional
-"settings.security_alerts_title" = "Security alerts";
-"settings.security_alerts_desc" = "Get notified about security threats";
-"settings.notifications_denied_message" = "To receive security alerts, please enable notifications for QR-SHIELD in Settings.";
-"settings.system_appearance_label" = "System Appearance";
-"settings.clear_history_button" = "Clear History";
-"settings.privacy_policy_link" = "Privacy Policy";
-"settings.source_code_link" = "Source Code";
+"settings.security_alerts_title" = "Alertas de segurança";
+"settings.security_alerts_desc" = "Receber notificações sobre ameaças";
+"settings.notifications_denied_message" = "Para receber alertas, ative as notificações do QR-SHIELD nos Ajustes.";
+"settings.system_appearance_label" = "Aparência do sistema";
+"settings.clear_history_button" = "Limpar histórico";
+"settings.privacy_policy_link" = "Política de privacidade";
+"settings.source_code_link" = "Código fonte";
 "settings.engine_swift" = "Swift 6";
-"settings.clear_confirm_message" = "This action cannot be undone. All scan history will be permanently deleted.";
+"settings.clear_confirm_message" = "Esta ação não pode ser desfeita. Todo o histórico será excluído permanentemente.";
 "settings.ios_version" = "iOS 17+";
-"settings.liquid_glass_footer" = "iOS 17+ introduces beautiful Liquid Glass effects. Reduce effects if you experience performance issues.";
+"settings.liquid_glass_footer" = "iOS 17+ introduz belos efeitos Liquid Glass. Reduza os efeitos se houver problemas de desempenho.";
 
 // MARK: - Dashboard Additional
-"dashboard.hero.description_full" = "QR-SHIELD analyses potential threats directly on your hardware. Experience";
-"dashboard.zero_latency" = "zero-latency phishing detection";
-"dashboard.version_date" = "Version 2023.10.24";
-"dashboard.offline_badge" = "OFFLINE READY";
+"dashboard.hero.description_full" = "QR-SHIELD analisa ameaças diretamente no seu hardware. Experimente";
+"dashboard.zero_latency" = "detecção de phishing sem latência";
+"dashboard.version_date" = "Versão 2023.10.24";
+"dashboard.offline_badge" = "PRONTO OFFLINE";
 
 // MARK: - Navigation
-"nav.version_offline" = "v2.4.0 • Offline Mode";
+"nav.version_offline" = "v2.4.0 • Modo offline";
 
 // MARK: - Results Additional
-"result.block_warning" = "This will block the domain and report it to your security team.";
-"result.dangerous_full_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
-"result.open_safari_risky" = "Open in Safari (Risky)";
-"result.open_warning_browser" = "Opening this URL in your browser may expose you to security risks.";
+"result.block_warning" = "Isso bloqueará o domínio e reportará à sua equipe de segurança.";
+"result.dangerous_full_warning" = "Este URL foi marcado como potencialmente perigoso. Abri-lo pode expô-lo a phishing ou malware.\n\nTem certeza que deseja continuar?";
+"result.open_safari_risky" = "Abrir no Safari (arriscado)";
+"result.open_warning_browser" = "Abrir este URL no navegador pode expô-lo a riscos de segurança.";
 
 // MARK: - Components
-"component.confidence" = "Confidence";
-"component.risk_score" = "Risk Score";
-"component.risk_flags" = "Risk Flags";
-"component.view_full_analysis" = "View Full Analysis";
-"component.select_image" = "Select an Image";
-"component.select_image_desc" = "Choose a photo containing a QR code";
-"component.idle_state" = "Idle State";
-"component.active_state" = "Active State";
+"component.confidence" = "Confiança";
+"component.risk_score" = "Pontuação de risco";
+"component.risk_flags" = "Indicadores de risco";
+"component.view_full_analysis" = "Ver análise completa";
+"component.select_image" = "Selecionar imagem";
+"component.select_image_desc" = "Escolha uma foto com código QR";
+"component.idle_state" = "Estado inativo";
+"component.active_state" = "Estado ativo";
 
 // MARK: - Threat History
-"threat.no_vulnerabilities" = "No vulnerabilities detected. Your device is secure.";
-"threat.live_map" = "LIVE THREAT MAP";
-"threat.global_view" = "Global View";
-"threat.last_audit" = "Last audit: %@";
-"threat.latest_updates" = "LATEST UPDATES";
-"threat.live" = "LIVE";
+"threat.no_vulnerabilities" = "Nenhuma vulnerabilidade detectada. Seu dispositivo está seguro.";
+"threat.live_map" = "MAPA DE AMEAÇAS AO VIVO";
+"threat.global_view" = "Visão global";
+"threat.last_audit" = "Última auditoria: %@";
+"threat.latest_updates" = "ÚLTIMAS ATUALIZAÇÕES";
+"threat.live" = "AO VIVO";
 
 // MARK: - History Additional
-"history.scan_statistics" = "Scan Statistics";
-"history.safe_count" = "Safe: %d";
-"history.suspicious_count" = "Suspicious: %d";
-"history.malicious_count" = "Malicious: %d";
-"history.total_scans" = "Total: %d scans";
+"history.scan_statistics" = "Estatísticas de varredura";
+"history.safe_count" = "Seguros: %d";
+"history.suspicious_count" = "Suspeitos: %d";
+"history.malicious_count" = "Maliciosos: %d";
+"history.total_scans" = "Total: %d varreduras";
+"history.exported_clipboard" = "Exportado para área de transferência";
+"history.url_label" = "URL";
 
 // MARK: - KMP Demo
-"kmp.integration" = "Kotlin Multiplatform Integration";
-"kmp.analyze_button" = "Analyze with KMP Engine";
-"kmp.quick_test" = "Quick Test:";
-"kmp.analysis_result" = "Analysis Result";
-"kmp.score_format" = "Score: %d/100";
-"kmp.risk_flags" = "Risk Flags:";
-"kmp.powered_by" = "Powered by Kotlin/Native";
+"kmp.integration" = "Integração Kotlin Multiplatform";
+"kmp.analyze_button" = "Analisar com motor KMP";
+"kmp.quick_test" = "Teste rápido:";
+"kmp.analysis_result" = "Resultado da análise";
+"kmp.score_format" = "Pontuação: %d/100";
+"kmp.risk_flags" = "Indicadores de risco:";
+"kmp.powered_by" = "Desenvolvido com Kotlin/Native";
 
 // MARK: - Scanner Additional
-"scanner.camera_required_title" = "Camera Access Required";
-"scanner.camera_required_message" = "QR-SHIELD needs camera access to scan QR codes. Please enable it in Settings.";
-"scanner.analyzing_dots" = "Analyzing...";
-"scanner.point_qr" = "Point at QR Code";
-"scanner.toggle_scan" = "Toggle scanning";
-"scanner.dismiss_error" = "Dismiss error";
-"scanner.camera_preview" = "Camera Preview";
+"scanner.camera_required_title" = "Acesso à câmera necessário";
+"scanner.camera_required_message" = "QR-SHIELD precisa de acesso à câmera para escanear códigos QR. Ative nos Ajustes.";
+"scanner.analyzing_dots" = "Analisando...";
+"scanner.point_qr" = "Aponte para o código QR";
+"scanner.toggle_scan" = "Alternar varredura";
+"scanner.dismiss_error" = "Fechar erro";
+"scanner.camera_preview" = "Prévia da câmera";
 
 // MARK: - Trust Centre Additional
-"trust.low" = "Low";
-"trust.balanced" = "Balanced";
-"trust.paranoia" = "Paranoia";
-"trust.reset_defaults" = "Reset to Defaults";
+"trust.low" = "Baixo";
+"trust.balanced" = "Equilibrado";
+"trust.paranoia" = "Paranoico";
+"trust.reset_defaults" = "Restaurar padrões";
 "trust.version_info" = "QR-SHIELD v2.4.0 (Build 892)";
 
 // MARK: - Export View
-"export.title" = "Export Threat Analysis";
-"export.subtitle" = "Choose a format to export your secure offline analysis.";
-"export.select_format" = "SELECT FORMAT";
-"export.live_preview" = "LIVE PREVIEW";
-"export.expand" = "Expand";
-"export.share" = "Share";
-"export.export_button" = "Export Report";
-"export.available_actions" = "AVAILABLE ACTIONS";
-"export.privacy_note" = "Privacy Note";
-"export.privacy_message" = "All analysis is performed entirely on your device. Exported reports do not contain any personal information beyond the URL you scanned.";
+"export.title" = "Exportar análise de ameaças";
+"export.subtitle" = "Escolha um formato para exportar sua análise segura offline.";
+"export.select_format" = "SELECIONAR FORMATO";
+"export.live_preview" = "PRÉVIA AO VIVO";
+"export.expand" = "Expandir";
+"export.share" = "Compartilhar";
+"export.export_button" = "Exportar relatório";
+"export.available_actions" = "AÇÕES DISPONÍVEIS";
+"export.privacy_note" = "Nota de privacidade";
+"export.privacy_message" = "Toda análise é realizada no seu dispositivo. Relatórios exportados não contêm informações pessoais.";
 
 // MARK: - Onboarding Additional
-"onboarding.camera_permission_message" = "QR-SHIELD needs camera access to scan QR codes. You can change this later in Settings.";
-"onboarding.page_of" = "Page %d of %d";
-
-// MARK: - History Additional
-"history.exported_clipboard" = "Exported to clipboard";
-"history.url_label" = "URL";
+"onboarding.camera_permission_message" = "QR-SHIELD precisa de acesso à câmera para escanear códigos QR. Você pode alterar isso nos Ajustes.";
+"onboarding.page_of" = "Página %d de %d";
 
 // MARK: - Accessibility Labels
-"accessibility.risk_score" = "Risk Score";
-"accessibility.risk_flags" = "Risk Flags";
-"accessibility.scan_history" = "Scan History";
-"accessibility.dismiss_error" = "Dismiss error";
-"accessibility.toggle_scanning" = "Toggle scanning";
-"accessibility.gallery" = "Gallery";
-"accessibility.open_history" = "Open history";
+"accessibility.risk_score" = "Pontuação de risco";
+"accessibility.risk_flags" = "Indicadores de risco";
+"accessibility.scan_history" = "Histórico de varreduras";
+"accessibility.dismiss_error" = "Fechar erro";
+"accessibility.toggle_scanning" = "Alternar varredura";
+"accessibility.gallery" = "Galeria";
+"accessibility.open_history" = "Abrir histórico";
